--- a/client/src/components/styles/ContactsPanel.scss
+++ b/client/src/components/styles/ContactsPanel.scss
@@ -6,7 +6,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 250px;
+    width: 300px;
     height: 100%;
     padding: 20px;
     padding-top: 65px;
